WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70047
[Qt][WK2] WebViews are emitting loadFailed for "private" error codes
https://bugs.webkit.org/show_bug.cgi?id=70047
Summary
[Qt][WK2] WebViews are emitting loadFailed for "private" error codes
Jesus Sanchez-Palencia
Reported
2011-10-13 12:46:43 PDT
Both QDesktopWebView and QTouchWebView are emitting loadFailed for all sort of errors. This includes errors like the ones defined in Source/WebKit2/WebProcess/WebCoreSupport/qt/WebErrorsQt.cpp, which are private since their domain is "WebKit" and whose error codes are not exposed anywhere in our API. We should filter these by not emitting this signal for private errors since there is no way for the users of our API to check them (no enums...). They could be exposed but I believe it would just pollute our API as this sort of errors are more related to WebKit internals than to user's actions or decisions.
Attachments
Patch
(1.85 KB, patch)
2011-10-13 12:57 PDT
,
Jesus Sanchez-Palencia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jesus Sanchez-Palencia
Comment 1
2011-10-13 12:57:12 PDT
Created
attachment 110890
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2011-10-13 12:59:53 PDT
Comment on
attachment 110890
[details]
Patch Possible to test this?
Jesus Sanchez-Palencia
Comment 3
2011-10-13 13:20:43 PDT
(In reply to
comment #2
)
> (From update of
attachment 110890
[details]
) > Possible to test this?
I don't think so =/. Maybe only if the test rely on private stuff... but I'm not sure it makes sense. The good thing about this patch is that if anyone ever thinks these errors should emit loadFailed it's easy to remove those lines. Plus, other ports do the same on their FrameLoaderClient implementation in WebKit1 and we ourselves used to do the same in FrameLoaderClientQt::shouldFallBack. So I guess we are safe here... Can I land it, Kenneth?
Kenneth Rohde Christiansen
Comment 4
2011-10-13 14:04:22 PDT
Sure!
Jesus Sanchez-Palencia
Comment 5
2011-10-13 14:15:33 PDT
Comment on
attachment 110890
[details]
Patch Clearing flags on attachment: 110890 Committed
r97398
: <
http://trac.webkit.org/changeset/97398
>
Jesus Sanchez-Palencia
Comment 6
2011-10-13 14:15:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug