[Qt][WK2] WebViews are emitting loadFailed for "private" error codes https://bugs.webkit.org/show_bug.cgi?id=70047

Reviewed by Kenneth Rohde Christiansen.

Both QDesktopWebView and QTouchWebView are emitting loadFailed for private errors
like the ones defined in Source/WebKit2/WebProcess/WebCoreSupport/qt/WebErrorsQt.cpp.

We now filter these by not emitting this signal for FrameLoadInterruptedByPolicyChange,
PlugInWillHandleLoad and Cancellation, following previous decisions from WebKit 1.

* UIProcess/qt/ClientImpl.cpp:
(dispatchLoadFailed):

Canonical link: https://commits.webkit.org/86128@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97398 268f45cc-cd09-0410-ab3c-d52691b4dbfc